[package]
name = "hik_sink"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = {version = "0.11", features = ["stream"]}
digest_auth = "0.3"
tokio = { version = "1", features = ["full"] }
mime = "0.3"
multipart-stream = "0.1"
futures = "0.3"
quick-error = "2"
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rumqttc = "0.8.0"

serde = {version = "1", features = ["derive"]}
serde_json = "1"
minidom = "0.13"
strum = { version = "0.21", features = ["derive"] }

structopt = { version = "0.3", default-features = false }
figment = { version = "0.10", features = ["toml", "env"] }

[dev-dependencies]
insta = { version = "1.7.2", features = ["redactions"]}
indoc = "1.0"